# aquarium-seahorse

./: CMakeLists.txt  CREDITS.md  README.md
.github/workflows/: cmake.yml  memcheck.yml  valgrind.yml
cmake/: FetchAquariumRock.cmake  FetchAquariumSeaTurtle.cmake  FetchAquariumTriggerfish.cmake
doc/: Conventions.md
include/: seahorse.h
include/seahorse/: array_i.h  array_list_i.h  array_list_ni.h  array_list_p.h  array_ni.h  array_p.h  collection_i.h  error.h  linked_queue_ni.h  linked_queue_sr.h  linked_red_black_tree_set_ni.h  linked_stack_ni.h  ordered_set_i.h  red_black_tree_map_i_i.h  red_black_tree_map_ni_i.h  red_black_tree_map_ni_ni.h  red_black_tree_map_ni_p.h  red_black_tree_map_p_p.h  red_black_tree_map_s_p.h  red_black_tree_map_s_s.h  red_black_tree_map_s_wr.h  red_black_tree_map_sr_sr.h  red_black_tree_set_i.h  red_black_tree_set_ni.h  red_black_tree_set_s.h  set_i.h  sorted_set_i.h  stream_i.h
src/: array_i.c  array_list_i.c  array_list_ni.c  array_list_p.c  array_ni.c  array_p.c  collection_i.c  error.c  linked_queue_ni.c  linked_queue_sr.c  linked_red_black_tree_set_ni.c  linked_stack_ni.c  ordered_set_i.c  red_black_tree_map_i_i.c  red_black_tree_map_ni_i.c  red_black_tree_map_ni_ni.c  red_black_tree_map_ni_p.c  red_black_tree_map_p_p.c  red_black_tree_map_s_p.c  red_black_tree_map_s_s.c  red_black_tree_map_s_wr.c  red_black_tree_map_sr_sr.c  red_black_tree_set_i.c  red_black_tree_set_ni.c  red_black_tree_set_s.c  set_i.c  sorted_set_i.c  stream_i.c
src/private/: collection_i.h  ordered_set_i.h  set_i.h  sorted_set_i.h  stream_i.h
src/test/: cmocka.h
test/: test_array_i.c  test_array_list_i.c  test_array_list_ni.c  test_array_list_p.c  test_array_ni.c  test_array_p.c  test_collection_i.c  test_linked_queue_ni.c  test_linked_queue_sr.c  test_linked_red_black_tree_set_ni.c  test_linked_stack_ni.c  test_ordered_set_i.c  test_red_black_tree_map_i_i.c  test_red_black_tree_map_ni_i.c  test_red_black_tree_map_ni_ni.c  test_red_black_tree_map_ni_p.c  test_red_black_tree_map_p_p.c  test_red_black_tree_map_s_p.c  test_red_black_tree_map_s_s.c  test_red_black_tree_map_s_wr.c  test_red_black_tree_map_sr_sr.c  test_red_black_tree_set_i.c  test_red_black_tree_set_ni.c  test_red_black_tree_set_s.c  test_seahorse.c  test_set_i.c  test_sorted_set_i.c  test_stream_i.c
